--- a/Diwali_sale_project.ipynb
+++ b/Diwali_sale_project.ipynb
@@ -1579,8 +1579,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4a1a106a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analysis done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Analysis done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e503d6e",
    "metadata": {},
    "outputs": [],
    "source": []
